Fixed runtime task for ubuntu / deb packaging. Added --enable-preview.